# bb870-rx

./: CMakeLists.txt  CMakePresets.json  Kconfig  README.md  pm_static_holyiot_21017_nrf52840.yml  prj.conf  sample.yaml
boards/: nrf21540dk_nrf52840.conf  nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay  nrf52840dongle_nrf52840.conf  nrf52840dongle_nrf52840.overlay  xiao_ble.conf  xiao_ble.overlay
boards/arm/etee_dongle_uf2/: Kconfig.board  Kconfig.defconfig  etee_dongle_uf2.dts  etee_dongle_uf2.yaml  etee_dongle_uf2_defconfig
boards/arm/supermini_uf2/: supermini_uf2.dts  supermini_uf2_defconfig
boards/etee/etee_dongle_uf2/: Kconfig.etee_dongle_uf2  board.yml  etee_dongle_uf2.dts  etee_dongle_uf2.yaml  etee_dongle_uf2_defconfig
boards/holyiot/holyiot_21017/: Kconfig.holyiot_21017  board.yml  holyiot_21017.dts  holyiot_21017.yaml  holyiot_21017_defconfig
boards/nordic/supermini_uf2/: board.yml  supermini_uf2-pinctrl.dtsi  supermini_uf2.dts  supermini_uf2_defconfig
src/: build_defines.h  console.c  esb.c  esb.h  globals.c  globals.h  hid.c  hid.h  main.c  system.c  system.h  timer.c  util.c  util.h
src/connection/: esb.c  esb.h  timer.c  timer.h
src/system/: battery.c  led.c  power.c  power.h  status.c  status.h  system.c  system.h
